--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "@netlify/vite-plugin-tanstack-start": "^1.0.2",
     "@prisma/adapter-pg": "^7.0.0",
-    "@prisma/client": "^7.0.0",
+    "@prisma/client": "^7.1.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-query": "^5.66.5",
@@ -36,8 +38,8 @@
     "@unpic/react": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.544.0",
-    "prisma": "^6.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.0.2",
@@ -57,6 +59,7 @@
     "dotenv-cli": "^10.0.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
+    "prisma": "^7.1.0",
     "tsx": "^4.20.6",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
