--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.544.0",
     "next-themes": "^0.4.6",
+    "query-string": "^9.3.1",
     "react": "^19.2.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
