--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "format": "prettier",
     "check": "prettier --write . && eslint --fix",
     "post-cta-init": "npx create-db@latest",
-    "db:generate": "dotenv -e .env.local -- prisma generate",
-    "db:push": "dotenv -e .env.local -- prisma db push",
-    "db:migrate": "dotenv -e .env.local -- prisma migrate dev",
-    "db:studio": "dotenv -e .env.local -- prisma studio",
-    "db:seed": "dotenv -e .env.local -- prisma db seed"
+    "db:generate": "dotenv -e .env -- prisma generate",
+    "db:push": "dotenv -e .env -- prisma db push",
+    "db:migrate": "dotenv -e .env -- prisma migrate dev",
+    "db:studio": "dotenv -e .env -- prisma studio",
+    "db:seed": "dotenv -e .env -- prisma db seed",
+    "db:reset": "dotenv -e .env -- prisma migrate reset"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
