--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
+    "recharts": "^2.15.4",
     "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.0.2",
