Install shadcn legacy peer deps.

--- a/package.json
+++ b/package.json
@@ -87,5 +87,8 @@
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-rc-69d4b800-20241021"
   }
 }
